# imginfo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  main.py
app/models/: analysis.py  image.py
app/routers/: analysis.py  generate.py  settings_router.py  tasks.py  upload.py
app/services/: analysis_parser.py  image_edit_executor.py  image_edit_plan.py  llm_service.py  storage_paths.py  task_store.py
app/templates/: index.html
tests/: test_analysis_parser.py  test_generate_router.py  test_image_edit_executor.py  test_image_edit_plan.py  test_llm_service.py  test_settings_router.py  test_storage_paths.py  test_task_store.py  test_upload_validation.py
